Improved docblock $document type across all methods and added a phpstan exception case because, after extracting the assertPropertyExists method, it can't evaluate anymore $document as array in the following statement: !$isObject && array_is_list($document)

--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -6,6 +6,7 @@ parameters:
         - src
     reportUnmatchedIgnoredErrors: false
     ignoreErrors:
+        - '#Cannot access offset string on array#'
         - '#recursiveKeySort#'
         - '#array_splice#'
-        - '#Cannot access offset string on array#'
+        - '#array_is_list#'
