Updated PHPUnit test command to use the newly created phpunit.xml file and added the coverage scope with attributes in FastJsonPatchTest.php

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "phpstan/phpstan": "^1.11"
     },
     "scripts": {
-        "test": "phpunit --no-configuration --test-suffix FastJsonPatchTest.php tests/ --colors=always",
+        "test": "phpunit",
         "static-analyse": "phpstan analyse --configuration phpstan.neon.dist"
     }
 }
