Removed --teamcity formatting from phpunit command in codecov workflow

--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -17,7 +17,7 @@ jobs:
         run: composer self-update && composer install && composer dump-autoload
 
       - name: Run tests and collect coverage
-        run: vendor/bin/phpunit --coverage-clover coverage.xml --configuration phpunit.xml --teamcity
+        run: vendor/bin/phpunit --coverage-clover coverage.xml --configuration phpunit.xml
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
