Extracted the exceptions tests, now each project class is tested with its own dedicated test class

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     },
     "autoload": {
         "psr-4": {
-            "blancks\\JsonPatch\\": "src"
+            "blancks\\JsonPatch\\": "src",
+            "blancks\\JsonPatchTest\\": "tests"
         }
     },
     "require": {
